# flake8-assert-msg

./: .pre-commit-config.yaml  README.md  RELEASING.md  azure-pipelines.yml  requirements-dev.txt  setup.cfg  tox.ini
.meta/: mypy.ini
misc/: mypy.ini
src/flake8_assert_msg/: __init__.py  flake8_assert_msg.py
tests/: flake8_assert_msg_test.py  integration_test.py
