[metadata]
name = flake8_assert_msg
version = attr: flake8_assert_msg.__version__
description = flake8 plugin which forbids assert statements without messages
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rkm/flake8-assert-msg
author = Ruairidh MacLeod
author_email = ruairidh@rkm.dev
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    flake8>=3.7
python_requires = >=3.6
package_dir =
    = src

[options.packages.find]
where = src

[options.entry_points]
flake8.extension =
    ASS=flake8_assert_msg:Plugin

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true

[mypy-testing.*]
disallow_untyped_defs = true

[mypy-tests.*]
disallow_untyped_defs = true
